Table Game {
    id int [pk, increment]
    title varchar
    description text
    designer varchar
    release_year date
    players int
    time_to_complete_estimate int
    recommended_age int
    player_id int [ref: > Player.id]
}

Table User {
    id int [pk, increment]
    first_name varchar
    last_name varchar
    email varchar
    password varchar
    username varchar
}


Table GamePlayer {
  id int [pk]
  player_id int [ref: > Player.id]
  game_id int [ref: > Game.id]
  created_at datetime
}

Table GameCategories {
    id int [pk, increment]
    player_id int [ref: > Player.id]
    game_id int [ref: > Game.id]
    category int [ref: > Categories.id]
}

Table Categories {
    id int [pk, increment]
    label varchar
}
Table GameRating {
    id int [pk, increment]
    player_id int [ref: > Player.id]
    rating int
  }

Table GameReview {
    id int [pk, increment]
    game_id int [ref: > Game.id]
    player_id int [ref: > Player.id]
    content text
    rating_id int [ref: > GameRating.id]
}

Table GameImage {
    id int [pk, increment]
    player_id int [ref: > Player.id]
    game_id int [ref: > Game.id]
    image_url varchar
}


